--- a/SchedulerAPI/src/main/resources/application.properties
+++ b/SchedulerAPI/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port=180
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/DutyScheduler
+spring.datasource.username=postgres
+spring.datasource.password=0000
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+
+# App Properties
+demo.app.jwtSecret=demoSecretKey
+demo.app.jwtExpirationMs=86400000
 
