Genetic algorithm parameter customizing

--- a/SchedulerAPI/src/main/resources/application.properties
+++ b/SchedulerAPI/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=180
+# server.port=180
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/DutyScheduler
-spring.datasource.username=postgres
-spring.datasource.password=0000
-
-# spring.datasource.url=jdbc:postgresql://dutyscheduler.postgres.database.azure.com:5432/DutyScheduler
+# spring.datasource.url=jdbc:postgresql://localhost:5432/DutyScheduler
 # spring.datasource.username=postgres
-# spring.datasource.password=DutyScheduler123
+# spring.datasource.password=0000
+
+spring.datasource.url=jdbc:postgresql://dutyscheduler.postgres.database.azure.com:5432/DutyScheduler
+spring.datasource.username=postgres
+spring.datasource.password=DutyScheduler123
 
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
