--- a/SchedulerAPI/src/main/resources/application.properties
+++ b/SchedulerAPI/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # spring.datasource.username=postgres
 # spring.datasource.password=0000
 
-spring.datasource.url=jdbc:postgresql://dutyscheduler.postgres.database.azure.com:5432/DutyScheduler
+spring.datasource.url=jdbc:postgresql://dutyschedulerdb.postgres.database.azure.com:5432/DutyScheduler
 spring.datasource.username=postgres
 spring.datasource.password=DutyScheduler123
 
