Configuration for SSL

--- a/SchedulerAPI/src/main/resources/application.properties
+++ b/SchedulerAPI/src/main/resources/application.properties
@@ -1,12 +1,19 @@
-# server.port=180
 
-# spring.datasource.url=jdbc:postgresql://localhost:5432/DutyScheduler
-# spring.datasource.username=postgres
-# spring.datasource.password=0000
+server.port: 180
+server.ssl.key-store: E:\\Media\\Dokumenti\\Projects\\DutyScheduler\\springboot.p12
+server.ssl.key-store-password: password
+server.ssl.key-store-type: pkcs12
+server.ssl.key-alias: springboot
+server.ssl.key-password: password
+server.ssl.enabled=true
 
-spring.datasource.url=jdbc:postgresql://dutyschedulerdb.postgres.database.azure.com:5432/DutyScheduler
+spring.datasource.url=jdbc:postgresql://localhost:5432/DutyScheduler
 spring.datasource.username=postgres
-spring.datasource.password=DutyScheduler123
+spring.datasource.password=0000
+
+# spring.datasource.url=jdbc:postgresql://dutyschedulerdb.postgres.database.azure.com:5432/DutyScheduler
+# spring.datasource.username=postgres
+# spring.datasource.password=DutyScheduler123
 
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
