Docker compose support

--- a/SchedulerAPI/src/main/resources/application.properties
+++ b/SchedulerAPI/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 
 server.port: 180
-server.ssl.key-store: E:\\Media\\Dokumenti\\Projects\\DutyScheduler\\springboot.p12
-server.ssl.key-store-password: password
-server.ssl.key-store-type: pkcs12
-server.ssl.key-alias: springboot
-server.ssl.key-password: password
-server.ssl.enabled=true
+#server.ssl.key-store: E:\\Media\\Dokumenti\\Projects\\DutyScheduler\\springboot.p12
+#server.ssl.key-store-password: password
+#server.ssl.key-store-type: pkcs12
+#server.ssl.key-alias: springboot
+#server.ssl.key-password: password
+#server.ssl.enabled=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/DutyScheduler
 spring.datasource.username=postgres
 spring.datasource.password=0000
+
+spring.sql.init.mode=always
 
 # spring.datasource.url=jdbc:postgresql://dutyschedulerdb.postgres.database.azure.com:5432/DutyScheduler
 # spring.datasource.username=postgres
